--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: darty
-description: A new Flutter package project.
+description: A handy collection Dart extensions to boost your productivity..
 version: 0.0.1
 author: Sasha Prokhorenko <djminikin@gmail.com>
 homepage: https://github.com/minikin/darty
@@ -8,8 +8,8 @@ environment:
   sdk: '>=2.7.0 <3.0.0'
 
 dev_dependencies:
-  pedantic: 1.8.0+1
-  test: ^1.9.2
+  pedantic: ^1.9.0
+  test: ^1.9.4
   test_coverage:
     git:
       url: https://github.com/jogboms/test-coverage.git
