--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: darty
-description: A handy collection Dart extensions to boost your productivity..
+description: A handy collection of Dart extensions to boost your productivity..
 version: 0.0.1
 author: Sasha Prokhorenko <djminikin@gmail.com>
 homepage: https://github.com/minikin/darty
