--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,10 @@ author: Sasha Prokhorenko <djminikin@gmail.com>
 homepage: https://github.com/minikin/darty
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
+
+dependencies:
+  characters: ^0.5.0
 
 dev_dependencies:
   pedantic: ^1.9.0
